update code examples and package links

--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@ permalink: "{{ page.filePathStem }}.html"
       Built-in Algorithms:
     </p>
     <dl>
-      <dt><a href="api/scala/index.html#smile.classification.package">Classification</a></dt>
+      <dt><a href="api/java/smile/classification/package-summary.html">Classification</a></dt>
       <dd><p>
         <a href="api/java/smile/classification/DecisionTree.html">Decision Trees</a>,
         <a href="api/java/smile/classification/AdaBoost.html">AdaBoost</a>,
@@ -87,7 +87,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/classification/OneVersusRest.html">One vs. Rest</a>
       </p></dd>
 
-      <dt><dt><a href="api/scala/index.html#smile.regression.package">Regression</a></dt>
+      <dt><dt><a href="api/java/smile/regression/package-summary.html">Regression</a></dt>
       <dd><p>
         <a href="api/java/smile/regression/OLS.html">Linear Regression</a>,
         <a href="api/java/smile/regression/LASSO.html">LASSO</a>,
@@ -119,7 +119,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/feature/SumSquaresRatio.html">Sum Squares ratio</a>
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.projection.package">Dimension Reduction</a></dt>
+      <dt><a href="api/java/smile/projection/package-summary.html">Dimension Reduction</a></dt>
       <dd><p>
         <a href="api/java/smile/projection/PCA.html">PCA</a>,
         <a href="api/java/smile/projection/KPCA.html">Kernel PCA</a>,
@@ -129,7 +129,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/projection/ICA.html">ICA</a>
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.validation.package">Model Validation</a></dt>
+      <dt><a href="api/java/smile/validation/package-summary.html">Model Validation</a></dt>
       <dd><p>
         <a href="api/java/smile/validation/CrossValidation.html">Cross Validation</a>,
         <a href="api/java/smile/validation/LOOCV.html">Leave-One-Out Validation</a>,
@@ -159,7 +159,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/validation/metric/MutualInformation.html">Mutual Information Score</a>,
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.clustering.package">Clustering</a></dt>
+      <dt><a href="api/java/smile/clustering/package-summary.html">Clustering</a></dt>
       <dd><p>
         <a href="api/java/smile/clustering/HierarchicalClustering.html">Hierarchical Clustering</a>,
         <a href="api/java/smile/clustering/CLARANS.html">CLARANS</a>,
@@ -184,26 +184,22 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/vq/NeuralMap.html">Neural Map</a>,
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.association.package">Association Rules</a></dt>
+      <dt><a href="api/java/smile/association/package-summary.html">Association Rules</a></dt>
       <dd><p>
         <a href="api/java/smile/association/FPGrowth.html">Frequent Itemset Mining</a>,
         <a href="api/java/smile/association/ARM.html">Association Rule Mining</a>
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.manifold.package">Manifold learning</a></dt>
+      <dt><a href="api/java/smile/manifold/package-summary.html">Manifold learning</a></dt>
       <dd><p>
         <a href="api/java/smile/manifold/IsoMap.html">IsoMap</a>,
         <a href="api/java/smile/manifold/LLE.html">LLE</a>,
         <a href="api/java/smile/manifold/LaplacianEigenmap.html">Laplacian Eigenmap</a>,
         <a href="api/java/smile/manifold/TSNE.html">t-SNE</a>,
-        <a href="api/java/smile/manifold/UMAP.html">UMAP</a>
-      </p></dd>
-
-      <dt><a href="api/scala/index.html#smile.mds.package">Multi-Dimensional Scaling</a></dt>
-      <dd><p>
-        <a href="api/java/smile/mds/MDS.html">Classical MDS</a>,
-        <a href="api/java/smile/mds/IsotonicMDS.html">Isotonic MDS</a>,
-        <a href="api/java/smile/mds/SammonMapping.html">Sammon Mapping</a>
+        <a href="api/java/smile/manifold/UMAP.html">UMAP</a>,
+        <a href="api/java/smile/manifold/MDS.html">Classical MDS</a>,
+        <a href="api/java/smile/manifold/IsotonicMDS.html">Isotonic MDS</a>,
+        <a href="api/java/smile/manifold/SammonMapping.html">Sammon Mapping</a>
       </p></dd>
 
       <dt><a href="api/java/smile/neighbor/package-summary.html">Nearest Neighbor Search</a></dt>
@@ -217,7 +213,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/hash/SimHash.html">SimHash</a>
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.sequence.package">Sequence Learning</a></dt>
+      <dt><a href="api/java/smile/sequence/package-summary.html">Sequence Learning</a></dt>
       <dd><p>
         <a href="api/java/smile/sequence/HMM.html">Hidden Markov Model</a>,
         <a href="api/java/smile/sequence/CRF.html">Conditional Random Field</a>
@@ -232,7 +228,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/timeseries/ARMA.html">ARMA</a>
       </p></dd>
 
-      <dt><a href="api/scala/index.html#smile.nlp.package">Natural Language Processing</a></dt>
+      <dt><a href="api/java/smile/nlp/package-summary.html">Natural Language Processing</a></dt>
       <dd><p>
         <a href="api/java/smile/nlp/tokenizer/SimpleSentenceSplitter.html">Sentence Splitter</a>,
         <a href="api/java/smile/nlp/tokenizer/SimpleTokenizer.html">Tokenizer</a>,
@@ -246,52 +242,37 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/nlp/embedding/Word2Vec.html">Word2Vec</a>
       </p></dd>
 
-      <dt><a href="api/java/smile/math/package-summary.html">Linear Algebra</a></dt>
+      <dt><a href="api/java/smile/math/package-summary.html">Mathematics</a></dt>
       <dd><p>
-        <a href="api/java/smile/math/matrix/DenseMatrix.html">Dense Matrix</a>,
+        <a href="api/java/smile/gap/package-summary.html">Genetic Algorithms</a>,
+        <a href="api/java/smile/graph/package-summary.html">Graph</a>,
+        <a href="api/java/smile/hash/package-summary.html">Hash Functions</a>,
+        <a href="api/java/smile/interpolation/package-summary.html">Interpolation</a>,
+        <a href="api/java/smile/sort/package-summary.html">Sort Algorithms</a>,
+        <a href="api/java/smile/taxonomy/package-summary.html">Taxonomy</a>,
+        <a href="api/java/smile/wavelet/package-summary.html">Wavelet</a>
+      </p></dd>
+
+      <dt><a href="api/java/smile/math/matrix/package-summary.html">Linear Algebra</a></dt>
+      <dd><p>
+        <a href="api/java/smile/math/matrix/Matrix.html">Dense Matrix</a>,
         <a href="api/java/smile/math/matrix/BandMatrix.html">Band Matrix</a>,
         <a href="api/java/smile/math/matrix/SparseMatrix.html">Sparse Matrix</a>,
-        <a href="api/java/smile/math/matrix/LU.html">LU</a>,
-        <a href="api/java/smile/math/matrix/Cholesky.html">Cholesky</a>,
-        <a href="api/java/smile/math/matrix/QR.html">QR</a>,
-        <a href="api/java/smile/math/matrix/EVD.html">EVD</a>,
-        <a href="api/java/smile/math/matrix/SVD.html">SVD</a>,
-        <a href="api/scala/index.html#smile.cas.package">Computer Algebra System</a>
+        <a href="api/java/smile/math/matrix/Matrix.LU.html">LU</a>,
+        <a href="api/java/smile/math/matrix/Matrix.Cholesky.html">Cholesky</a>,
+        <a href="api/java/smile/math/matrix/Matrix.QR.html">QR</a>,
+        <a href="api/java/smile/math/matrix/Matrix.EVD.html">EVD</a>,
+        <a href="api/java/smile/math/matrix/Matrix.SVD.html">SVD</a>,
+        <a href="api/java/smile/math/matrix/BiconjugateGradient.html">Biconjugate Gradient</a>,
+        <a href="api/java/smile/math/BFGS.html">BFGS</a>,
+        <a href="api/scala/smile/cas/index.html">Computer Algebra System</a>
       </p></dd>
 
       <dt><a href="api/java/smile/stat/package-summary.html">Statistics</a></dt>
       <dd><p>
         <a href="api/java/smile/stat/distribution/package-summary.html">Distributions</a>,
         <a href="api/java/smile/math/random/package-summary.html">Random Number Generators</a>,
-        <a href="api/java/smile/stat/hypothesis/TTest.html">t-test</a>,
-        <a href="api/java/smile/stat/hypothesis/FTest.html">F-test</a>,
-        <a href="api/java/smile/stat/hypothesis/ChiSqTest.html">&Chi;<sup>2</sup>-test</a>,
-        <a href="api/java/smile/stat/hypothesis/CorTest.html">Correlation Test</a>,
-        <a href="api/java/smile/stat/hypothesis/KSTest.html">Kolmogorov-Smirnov Test</a>
-      </p></dd>
-
-      <dt><a href="api/java/smile/interpolation/package-summary.html">Interpolation</a></dt>
-      <dd><p>
-        <a href="api/java/smile/interpolation/LinearInterpolation.html">Linear</a>,
-        <a href="api/java/smile/interpolation/BilinearInterpolation.html">Bilinear</a>,
-        <a href="api/java/smile/interpolation/CubicSplineInterpolation1D.html">Cubic</a>,
-        <a href="api/java/smile/interpolation/BicubicInterpolation.html">Bicubic</a>,
-        <a href="api/java/smile/interpolation/KrigingInterpolation.html">Kriging</a>,
-        <a href="api/java/smile/interpolation/LaplaceInterpolation.html">Laplace</a>,
-        <a href="api/java/smile/interpolation/ShepardInterpolation.html">Shepard</a>,
-        <a href="api/java/smile/interpolation/RBFInterpolation.html">RBF</a>
-      </p></dd>
-
-      <dt><a href="api/scala/index.html#smile.wavelet.package">Wavelet</a></dt>
-      <dd><p>
-        <a href="api/java/smile/wavelet/Wavelet.html">Discrete Wavelet Transform</a>,
-        <a href="api/java/smile/wavelet/WaveletShrinkage.html">Wavelet Shrinkage</a>
-        <a href="api/java/smile/wavelet/HaarWavelet.html">Haar</a>
-        <a href="api/java/smile/wavelet/DaubechiesWavelet.html">Daubechies</a>
-        <a href="api/java/smile/wavelet/D4Wavelet.html">D4</a>
-        <a href="api/java/smile/wavelet/BestLocalizedWavelet.html">Best Localized Wavelet</a>,
-        <a href="api/java/smile/wavelet/CoifletWavelet.html">Coiflet</a>,
-        <a href="api/java/smile/wavelet/SymletWavelet.html">Symlet</a>
+        <a href="api/java/smile/stat/Hypothesis.html">Hypothesis Tests</a>
       </p></dd>
     </dl>
   </div>
@@ -436,7 +417,7 @@ permalink: "{{ page.filePathStem }}.html"
     <div class="col-md-5 col-sm-5 col-padded-top col-center">
       <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/benchm-ml.png" style="width: 100%;" />
-        <div class="caption" style="min-width: 272px;">Running Time (s)</div>
+        <div class="caption" style="min-width: 272px;">Training Time (seconds)</div>
       </div>
     </div>
   </div>
@@ -457,13 +438,25 @@ permalink: "{{ page.filePathStem }}.html"
     </div>
     <div class="col-md-5 col-sm-5 col-padded-top col-center">
       <ul class="nav nav-tabs">
-        <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
-        <li><a href="#java_1" data-toggle="tab">Java</a></li>
+        <li class="active"><a href="#java_1" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_1" data-toggle="tab">Scala</a></li>
         <li><a href="#kotlin_1" data-toggle="tab">Kotlin</a></li>
         <li><a href="#clojure_1" data-toggle="tab">Clojure</a></li>
         <li><a href="#groovy_1" data-toggle="tab">Groovy</a></li>
       </ul>
       <div class="tab-content">
+        <div class="tab-pane" id="java_1">
+          <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+var iris = Read.arff("iris.arff");
+
+var model = RandomForest.fit(Formula.lhs("class"), iris);
+
+println(model.metrics());
+          </code></pre>
+          </div>
+          <div class="caption">Model Fitting</div>
+        </div>
         <div class="tab-pane active" id="scala_1">
           <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-scala"><code>
@@ -475,19 +468,7 @@ println(model.metrics)
 
           </code></pre>
           </div>
-          <div class="caption">Random Forest</div>
-        </div>
-        <div class="tab-pane" id="java_1">
-          <div class="code" style="text-align: left;">
-          <pre class="prettyprint lang-java"><code>
-var iris = Read.arff("iris.arff");
-
-var model = RandomForest.fit(Formula.lhs("class"), iris);
-
-println(model.metrics());
-          </code></pre>
-          </div>
-          <div class="caption">Random Forest</div>
+          <div class="caption">Model Fitting</div>
         </div>
         <div class="tab-pane" id="kotlin_1">
           <div class="code" style="text-align: left;">
@@ -499,7 +480,7 @@ val model = randomForest(Formula.lhs("class"), iris)
 println(model.metrics())
           </code></pre>
           </div>
-          <div class="caption">Random Forest</div>
+          <div class="caption">Model Fitting</div>
         </div>
         <div class="tab-pane" id="clojure_1">
           <div class="code" style="text-align: left;">
@@ -512,7 +493,7 @@ println(model.metrics())
 
           </code></pre>
           </div>
-          <div class="caption">Random Forest</div>
+          <div class="caption">Model Fitting</div>
         </div>
         <div class="tab-pane" id="groovy_1">
           <div class="code" style="text-align: left;">
@@ -524,7 +505,7 @@ var model = RandomForest.fit(Formula.lhs("class"), iris)
 println model.metrics()
           </code></pre>
           </div>
-          <div class="caption">Random Forest</div>
+          <div class="caption">Model Fitting</div>
         </div>
       </div>
     </div>
@@ -590,22 +571,24 @@ println model.metrics()
       <div class="tab-content">
         <div class="tab-pane active" id="scala_2">
           <div class="code" style="text-align: left;">
-          <pre class="prettyprint lang-scala"><code>
-val a = randn(3, 3)
-val x = c(1.0, 2.0, 3.0)
-a \ x
-inv(a) %*% a
+          <pre class="prettyprint lang-java"><code>
+var A = Matrix.randn(3, 3);
+double[] x = {1.0, 2.0, 3.0};
+var lu = A.lu();
+lu.solve(x);
+lu.inverse().mm(A);
           </code></pre>
           </div>
           <div class="caption">Linear Algebra</div>
         </div>
         <div class="tab-pane" id="scala_3">
           <div class="code" style="text-align: left;">
-          <pre class="prettyprint lang-scala"><code>
-val bins1 = Array(8, 13, 16, 10, 3)
-val bins2 = Array(4,  9, 14, 16, 7)
+          <pre class="prettyprint lang-java"><code>
+int[] bins1 = {8, 13, 16, 10, 3};
 
-chisqtest2(bins1, bins2)
+int[] bins2 = {4,  9, 14, 16, 7};
+
+Hypothesis.chisq.test(bins1, bins2);
           </code></pre>
           </div>
           <div class="caption">Statistics</div>
@@ -616,7 +599,8 @@ chisqtest2(bins1, bins2)
 val x = Var("x")
 val y = Var("y")
 val e = x**2 + y**3 + x**2 * cot(y**3)
-println(e.d(x))
+val dx = e.d(x)
+println(dx)
           </code></pre>
           </div>
           <div class="caption">Computer Algebra System</div>
