--- a/web/index.html
+++ b/web/index.html
@@ -455,7 +455,7 @@ var model = RandomForest.fit(Formula.lhs("class"), iris);
 println(model.metrics());
           </code></pre>
           </div>
-          <div class="caption">Model Fitting</div>
+          <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
         <div class="tab-pane active" id="scala_1">
           <div class="code" style="text-align: left;">
@@ -468,7 +468,7 @@ println(model.metrics)
 
           </code></pre>
           </div>
-          <div class="caption">Model Fitting</div>
+          <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
         <div class="tab-pane" id="kotlin_1">
           <div class="code" style="text-align: left;">
@@ -480,7 +480,7 @@ val model = randomForest(Formula.lhs("class"), iris)
 println(model.metrics())
           </code></pre>
           </div>
-          <div class="caption">Model Fitting</div>
+          <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
         <div class="tab-pane" id="clojure_1">
           <div class="code" style="text-align: left;">
@@ -493,7 +493,7 @@ println(model.metrics())
 
           </code></pre>
           </div>
-          <div class="caption">Model Fitting</div>
+          <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
         <div class="tab-pane" id="groovy_1">
           <div class="code" style="text-align: left;">
@@ -505,7 +505,7 @@ var model = RandomForest.fit(Formula.lhs("class"), iris)
 println model.metrics()
           </code></pre>
           </div>
-          <div class="caption">Model Fitting</div>
+          <div class="caption">DataFrame, Model Fitting, and Metrics</div>
         </div>
       </div>
     </div>
