--- a/web/index.html
+++ b/web/index.html
@@ -135,7 +135,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/validation/LOOCV.html">Leave-One-Out Validation</a>,
         <a href="api/java/smile/validation/Bootstrap.html">Bootstrap</a>,
         <a href="api/java/smile/validation/ConfusionMatrix.html">Confusion Matrix</a>,
-        <a href="api/java/smile/validation/Hyperparameters.html">Hyperparameter Tuning</a>
+        <a href="api/java/smile/validation/Hyperparameters.html">Hyperparameter Tuning</a>,
         <a href="api/java/smile/validation/metric/AUC.html">AUC</a>,
         <a href="api/java/smile/validation/metric/LogLoss.html">LogLoss</a>,
         <a href="api/java/smile/validation/metric/CrossEntropy.html">CrossEntropy</a>,
@@ -181,7 +181,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/vq/SOM.html">Self-Organizing Maps</a>,
         <a href="api/java/smile/vq/NeuralGas.html">Neural Gas</a>,
         <a href="api/java/smile/vq/GrowingNeuralGas.html">Growing Neural Gas</a>,
-        <a href="api/java/smile/vq/NeuralMap.html">Neural Map</a>,
+        <a href="api/java/smile/vq/NeuralMap.html">Neural Map</a>
       </p></dd>
 
       <dt><a href="api/java/smile/association/package-summary.html">Association Rules</a></dt>
