--- a/web/quickstart.html
+++ b/web/quickstart.html
@@ -415,7 +415,8 @@ smile&gt;
     <p>You can also use Smile in your favorite Notebook.
         We recommend JupyterLab and provide <code>jupyterlab.sh</code>
         to setup the conda environment of Jupyter Lab for Smile with
-        kernels for Scala, Kotlin and Clojure. When you run
+        kernels for Scala, Kotlin and Clojure. The script is located at
+        <code>./shell/src/universal/bin/jupyterlab.sh</code>. When you run
         <code>jupyterlab.sh</code> first time, it will set up the environment
         automatically. You can update the environment with the option
         <code>--update</code> later when needed. You may install BeakerX
