--- a/web/faq.html
+++ b/web/faq.html
@@ -74,7 +74,7 @@ permalink: "{{ page.filePathStem }}.html"
         includes MKL binaries. With `smile-mkl` module in the class path, Smile
         will automatically switch to MKL.</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" %% "smile-mkl" % "2.6.0"
+    libraryDependencies += "com.github.haifengl" % "smile-mkl" % "2.6.0"
     </code></pre>
 
     <h2 class="question" id="model-serialization">Model serialization</h2>
