update docs for 3.0.1

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,9 @@ permalink: "{{ page.filePathStem }}.html"
   <div class="news" style="margin-bottom: 20px;">
     <h5>Latest News</h5>
     <ul class="list-unstyled">
+      <li><a href="https://github.com/haifengl/smile/releases/tag/v3.0.1">Smile 3.0.1 Released!</a>
+        <span class="small">(Mar 3, 2023)</span></li>
+
       <li><a href="https://github.com/haifengl/smile/releases/tag/v3.0.0">Smile 3.0.0 Released!</a>
         <span class="small">(Dec 15, 2022)</span></li>
 
