--- a/web/vegalite.html
+++ b/web/vegalite.html
@@ -1756,7 +1756,7 @@ show(VegaLite.splom(iris, "class"))
     <div id="vis_31"></div>
     <script type="text/javascript">
       var spec = {
-  "data": {"url": "https://vega.github.io/vega-lite/examples/data/iris.json"},
+  "data": {"url": "https://raw.githubusercontent.com/domoritz/maps/master/data/iris.json"},
   "repeat": {
     "row": ["petalWidth", "petalLength", "sepalWidth", "sepalLength"],
     "column": ["sepalLength", "sepalWidth", "petalLength", "petalWidth"]
